<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settingsMainNavigationPanel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsMainNavHome"
        style="@style/Widget.NdiBrowser.Button.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_main_nav_home"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.NdiBrowser.Button"
        app:iconGravity="textStart" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsMainNavStream"
        style="@style/Widget.NdiBrowser.Button.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.NdiBrowser.Button"
        android:text="@string/settings_main_nav_stream" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsMainNavView"
        style="@style/Widget.NdiBrowser.Button.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.NdiBrowser.Button"
        android:text="@string/settings_main_nav_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsMainNavSettings"
        style="@style/Widget.NdiBrowser.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.NdiBrowser.Button"
        android:text="@string/settings_main_nav_settings" />

</LinearLayout>
